# vg-nde-sdk

./: .coveragerc  .flake8  .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml
.github/: dependabot.yml
.github/workflows/: ci.yaml  release.yaml
docs/: Makefile  bhcpage.rst  conf.py  general.rst  index.rst  make.bat  meshdescriptorpage.rst  projectpage.rst  reconstructiondescriptorpage.rst  volumedescriptorpage.rst
examples/manual_setup/: .gitignore  __init__.py  manual_setup.py
examples/meshes/: .gitignore  __init__.py  mesh_from_files.py
examples/reconstructions/: .gitignore  __init__.py  reconstruction_from_projections.py
examples/reconstructions/data/: bright.raw  zw000.raw  zw001.raw  zw002.raw  zw003.raw  zw004.raw  zw005.raw  zw006.raw  zw007.raw  zw008.raw  zw009.raw  zw010.raw  zw011.raw  zw012.raw  zw013.raw  zw014.raw  zw015.raw  zw016.raw  zw017.raw  (+342 more)
examples/volumes/: .gitignore  __init__.py  volume_from_block.py  volume_from_stack.py
scripts/: __init__.py  format.py  lint_project.py  run_audit.py  run_pytest.py
tests/sections/: test_types.py
vg_nde_sdk/: __init__.py  py.typed
vg_nde_sdk/projects/: __init__.py  mesh.py  project.py  reconstruction.py  volume.py
vg_nde_sdk/projecttools/: __init__.py  mesh.py  reconstruction.py  volume.py
vg_nde_sdk/sections/: __init__.py  component.py  manufacturer.py  mesh.py  mesh_enums.py  mesh_holder.py  reconstruction.py  reconstruction_enums.py  reconstruction_holder.py  scan.py  types.py  version.py  volume.py  volume_enums.py  volume_holder.py
vg_nde_sdk/serializers/: __init__.py
(+131 files in other folders)
