[project]
name = "vg_nde_sdk"
version = "2025.5.26"
description = "VG NDE SDK"
license = {text = "All Rights Reserved"}
readme = "README.md"
requires-python = ">=3.9"

[dependency-groups]
dev = [
  "pytest",
  "pytest-cov",
  "pytest-bdd",
  "pytest-asyncio",
  "flake8",
  "flake8-bugbear",
  "flake8-bandit",
  "flake8-black",
  "flake8-annotations",
  "flake8-docstrings",
  "darglint",
  "pre-commit",
  "isort",
  "mypy",
  "typeguard",
  "responses",
  "pip-audit",
  "httpx",
  "toml",
  "requests == 2.32.3",
  "poethepoet>=0.33.0",
  "flake8-isort>=6.1.2",
]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]


[tool.poe.tasks]
audit.script              = "scripts.run_audit:main"
format.script             = "scripts.format:main"
format_check.script       = "scripts.format:main_check"
lint.script               = "scripts.lint_project:main"
test.script               = "scripts.run_pytest:main"

[tool.isort]
profile = "black"
